tests/ui/coercion/coerce-issue-49593-box-never.fallback.stderr
error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never.rs:18:5
   |
LL |     Box::<_ /* ! */>::new(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = note: required for the cast from `Box<()>` to `Box<(dyn std::error::Error + 'static)>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
